# grpc-demo

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cmake/: common.cmake
cpp/proto/: helloworld.proto
cpp/src/: main.cpp
go/: Makefile  go.mod  go.sum
go/proto/: helloworld.pb.go  helloworld_grpc.pb.go
go/src/main/: main.go
